fix(ui): Correct layout of Docking window
Changes:
- DynamicAttributeLayout uses GridBagLayout for better layout of dynamic attributes
- Separate min & preferred sizes for MonitorWindow, EventViewer & EntityBrowser.
- Person General & Personality tabs adjusted to better use available space and avoid excessive empty space when resized larger.
- MonitorWindow default position in now CENTER
- Code smells for ConsolePanel

ref #1808